src/styles.scss
@charset "utf-8";

// https://github.com/metafizzy/flickity/issues/754
@import "~flickity/css/flickity.css";

// Import Lato Google Font
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');

// Update Bulma's global variables
$family-sans-serif: "Lato", sans-serif;
$widescreen-enabled: false;
$fullhd-enabled: false;

// More theme colors could be added here...
$primary: #476b6b;

$spaces: ("0": 0, "1": 1.65rem, "2": 1.75rem);

$margin-default: map-get($spaces, "2") map-get($spaces, "0");

// Update some of Bulma's component & color variables
$footer-padding: 3rem 1.5rem;
$link: hsl(171, 100%, 41%);

// Custom Styles
.card-gap {margin-top:1.75rem}
.modal-trigger { cursor: pointer; }
a.icon > strong {margin-left:.25rem}
.modal-card-body div.content {margin:$margin-default}

// import everything - alternatively import just what you need: https://bulma.io/documentation/overview/modular/
@import "~bulma/bulma"; 

// override specific bulma styles
.section {padding: 2.15rem 1.5rem}

@function theme-color($key: "primary") {
    @return map-get($theme-colors, $key);
}

// Flickity - begin
.carousel-cell {width:100%}
// Flickity - end


// PROJECT AND BLOG TILES STYLING
// This is the class for the images of the projects and blog tiles 
.responsive-img {
    width: 100%;      /* Make image width fill the container */
    height: auto;     /* Maintain aspect ratio */
    object-fit: contain; /* Cover container while maintaining aspect ratio */
  }


// Ensure the tags are anchored to the bottom of the tile
/* Make the article a flex container to align children */
.tile.is-child {
    display: flex;
    flex-direction: column;
    justify-content: space-between; /* Pushes tags to the bottom */
  }
  
  /* Optional: styling for tags-container */
  .tags-container {
    display: flex;
    gap: 5px;
    flex-wrap: wrap;
    padding: 10px;
    background-color: rgba(240, 240, 240, 0.9); /* Light background */   
  }
  
  /* Tag styling */
  .tag {
    background-color: #347dcc;
    color: #fff;
    padding: 5px 10px;
    border-radius: 4px;
    font-size: 0.8em;
  }

  .center-text {
    text-align: center; /* Centers text horizontally */
  }
  

 

